# Levenshtein

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.windows  LICENSE.txt  Levenshtein.cpp  Levenshtein.sln  Levenshtein.vcxproj  Levenshtein.vcxproj.filters  License.txt  NOTES.md  README.md  ReadMe.md  ReadMeNEW.md  common.h  compose.yaml  damlev.cpp  damlev2D.cpp  damlevconst.cpp  damlevconstmin.cpp  damlevlim.cpp  damlevlimp.cpp  damlevmin.cpp  damlevnorm.cpp  damlevp.cpp  dockerfile  linux-build-compose.yaml  noop.cpp  toolchain.cmake  validate_max.h
doc/: Benchmarks.md  Building.md  Documentation.md  Index.md  Notes.md  OptimizatingEditDistance.md  Testing.md  Usage.md
include/: algorithms_list.hpp.in
include/mysql-8-0-39/: mysql.h  mysql_com.h
src/: CMakeLists.txt  bounded_edit_dist.cpp  bounded_edit_dist_OLD.cpp  bounded_edit_dist_t.cpp  common.h  damlev.cpp  damlev2D.cpp  damlevlim.cpp  damlevmin.cpp  damlevminp.cpp  damlevp.cpp  edit_dist.cpp  edit_dist_simd.cpp  edit_dist_t.cpp  edit_dist_t_2d.cpp  lev.cpp  lev_simd.cpp  levlim.cpp  levlimopt.cpp  levmin.cpp  min_edit_dist.cpp  min_edit_dist_t.cpp  min_similarity_t.cpp  noop.cpp  postgres.cpp  prealgorithm.h  simd_trim.cpp  similarity_t.cpp  validate_max.h
src/algorithms/: common.h  damlev.cpp  damlev1D.cpp  damlev2D.cpp  damlevconst.cpp  damlevconstmin.cpp  damlevlim.cpp  damlevlimopt.cpp  damlevmin.cpp  damlevminp.cpp  damlevp.cpp  lev.cpp  levlim.cpp  levlimopt.cpp  noop.cpp  prealgorithm.h  validate_similarity.h
src/common/: common.h
tests/: CMakeLists.txt  algorithms.h  algorithms_list.hpp  benchmark.cpp  benchmark_data_gen.cpp  benchtime.hpp  compareoneoff.cpp  comparetests.cpp  doctest.h  edit_operations.cpp  edit_operations.hpp  editdistanceexample.cpp  metrics.cpp  metrics.hpp  print_matrix.cpp  taxanames  testcases.cpp  testharness.hpp  testoneoff.cpp  unittests.cpp
tools/: Matrix.py
